2013-03-04
* assign results of aggregate scans (if any) to the top level element.
* merge remaining part of generateuniquehtml.py into generatereports.py,
remove generateuniquehtml.py
* add support for pack200, not enabled by default, since I first need to
figure out how to easily add a dependency on openjdk without version names.

2013-03-03
* deduplicate data for unique matches stored in results for JAR files. In some
cases this is a HUGE save (96% in size in some of my test cases).
* deduplicate data for unmatched strings stored in results for JAR files.
* generate unique string matches html report files in aggregate scan after
deduplication

2013-03-02
* extract pickles for generating images in parallel
* add storedir and other configuration directives to aggregate scans
* remove rankimages.py from configuration
* create workaround for weird ZIP files
* add aggregate scan for finding duplicate files. Reporting still needs to be
added.
* add more license markers

2013-03-01
* check whether or not file to be scanned actually exists
* add tags for gzip compressed files
* generate piecharts in parallel
* start on extracting pickles in parallel
* start on deduplication of report generation

2013-02-24
* don't scan identical JAR files in aggregatejars.py in parallel: it could
lead to race conditions when writing the result file, plus also costs more
time scanning.
* add code to optionally remove results of .class files after aggregating JAR
results. This saves time generating pictures for individual class files, which
might not be very interesting.

2013-02-23
* add identifier for UPX

2013-02-21
* let aggregatescans check unpackreports instead of leafreports for tags in
sanity checks
* add priority for aggregatescans
* parallellise aggregatejars.py
* start on deduplicating generating images

2013-02-20
* use clearer variable names in generateuniquehtml.py
* don't dump configuration as part of scandata.pickle, but copy the original